# HyConf

./: .gitignore  ACMfile_import2.m  JSON_parse.m  JSON_search.m  JSON_update.m  JavaClient.m  LICENSE-AIC.txt  README.md  TJte_closeness2.m  TJte_closeness_degree.m  acumen_plot2.m  acumen_sim2.m  conformance_check.m  determine_critical_tau_epsilon.m  gui.asv  gui.fig  gui.m  matlab_plot.m  run_without_gui.m
Models/: boucingBall_MI.acm  boucingBall_SP.m  platooning_MI.m  thermostat_MI.acm  thermostat_MI2.acm  thermostat_SP.m
Systems/solar_panel_vacuum_cleaner-master/simulation/gazebo/simple_diff_drive/robot/plugins/controller/: CMakeLists.txt  OutputLeftMotorOp.cpp  OutputRightMotorOp.cpp  VacuumCleanerBehaviour.cpp  VacuumCleanerPlatform.cpp  controller.cpp  load_model.sh  main.cpp
Systems/solar_panel_vacuum_cleaner-master/simulation/gazebo/simple_diff_drive/robot/plugins/controller/includes/: Definitions.hpp  OutputLeftMotorOp.hpp  OutputRightMotorOp.hpp  TestBehaviour.hpp  VacuumCleanerBehaviour.hpp  VacuumCleanerPlatform.hpp
Systems/solar_panel_vacuum_cleaner-master/simulation/gazebo/simple_diff_drive/robot/plugins/controller/includes/statemachines/: AngularSpeedSM.hpp  DisplacementSM.hpp  InputDuplicationSM.hpp  MidLevelSM.hpp  PID.hpp  PathPlanningSM.hpp  SpeedSM.hpp
Systems/solar_panel_vacuum_cleaner-master/simulation/gazebo/simple_diff_drive/robot/plugins/controller/statemachines/: InputDuplicationSM.cpp  LinearSpeedSM.cpp  MidLevelSM.cpp  PID.cpp  PathPlanningSM.cpp  SpeedSM.cpp
Tool/: JSON_parse.m  JSON_search.m  acumen_plot2.m  acumen_sim2.m  gui.m  (+1 more)
(+278 files in other folders)
